--- a/config/default.json.example
+++ b/config/default.json.example
@@ -101,6 +101,15 @@
       "pass": "Do-Not-Use-This-Password-Youll-Be-Hacked-For-all-Teh-Moneys!"
     }
   },
+  "aro": {
+    "paytxfee": .1,
+    "config": {
+      "port": 3346,
+      "user": "username",
+      "pass": "Do-Not-Use-This-Password-Youll-Be-Hacked-For-all-Teh-Moneys!"
+    }
+  },
+
   
   "moderation":{
   "pm2Name": "TipBot",
